[package]
name = "doge-local-ops"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "=1.3.3"
bs58 = { version = "0.5.1", default-features = false, features = ["alloc", "check"] }
bytemuck = "1.24"
clap = { version = "4.5", features = ["derive"] }
doge-bridge-client = { git = "https://github.com/PsyProtocol/psy-doge-solana-bridge.git", branch = "devnet" }
hex = "0.4"
psy-bridge-core = { git = "https://github.com/PsyProtocol/psy-doge-solana-bridge.git", branch = "devnet", default-features = false, features = ["std", "serialize_bytemuck", "sha2"] }
psy-doge-solana-core = { git = "https://github.com/PsyProtocol/psy-doge-solana-bridge.git", branch = "devnet", default-features = false, features = ["std", "serialize_bytemuck", "fake_signer"] }
reqwest = { version = "=0.12.24", default-features = false, features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
solana-transaction-status = "=2.2.1"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
tempfile = "3"
